// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectInspector - state does not expand if the user selected some text 1`] = `
"▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }"
`;

exports[`ObjectInspector - state does not expand if the user selected some text 2`] = `
"▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }"
`;

exports[`ObjectInspector - state has the expected expandedPaths state 1`] = `
"▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }"
`;

exports[`ObjectInspector - state has the expected expandedPaths state 2`] = `
"▼ {…}
|    a: 1
|    Symbol(): \\"hello\\"
|  ▶︎ __proto__: Object { … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }"
`;

exports[`ObjectInspector - state has the expected expandedPaths state 3`] = `
"▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }"
`;

exports[`ObjectInspector - state has the expected expandedPaths state 4`] = `
"▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▼ Proxy
|  ▶︎ <target>: Object { … }
|  ▶︎ <handler>: Array(3) [ … ]"
`;

exports[`ObjectInspector - state has the expected expandedPaths state 5`] = `
"▼ {…}
|    a: 1
|    Symbol(): \\"hello\\"
|  ▶︎ __proto__: Object { … }
▼ Proxy
|  ▶︎ <target>: Object { … }
|  ▶︎ <handler>: Array(3) [ … ]"
`;

exports[`ObjectInspector - state has the expected state when expanding a node 1`] = `
"▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }"
`;

exports[`ObjectInspector - state has the expected state when expanding a node 2`] = `
"▼ {…}
|  ▶︎ __proto__: Object {  }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }"
`;

exports[`ObjectInspector - state has the expected state when expanding a node 3`] = `
"▼ {…}
|  ▼ __proto__: {}
|  |  ▶︎ __proto__: Object {  }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }"
`;

exports[`ObjectInspector - state has the expected state when expanding a proxy node 1`] = `
"▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▶︎ Proxy { <target>: {…}, <handler>: (3) […] }"
`;

exports[`ObjectInspector - state has the expected state when expanding a proxy node 2`] = `
"▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▼ Proxy
|  ▶︎ <target>: Object { … }
|  ▶︎ <handler>: Array(3) [ … ]
|  ▶︎ __proto__: Object {  }"
`;

exports[`ObjectInspector - state has the expected state when expanding a proxy node 3`] = `
"▶︎ Object { p0: \\"0\\", p1: \\"1\\", p2: \\"2\\", p3: \\"3\\", p4: \\"4\\", p5: \\"5\\", p6: \\"6\\", p7: \\"7\\", p8: \\"8\\", p9: \\"9\\", … }
▼ Proxy
|  ▶︎ <target>: Object { … }
|  ▶︎ <handler>: Array(3) [ … ]
|  ▼ __proto__: {}
|  |  ▶︎ __proto__: Object {  }"
`;
